--- a/index.html
+++ b/index.html
@@ -1,7 +1,53 @@
 <h2>Rasul Sönmez</h2>
 <h5>Hakkımda</h5>
 <p>Merhaba. Ben Rasul Sönmez! İstanbul'da yaşıyorum. Bilimkurgu izlemeyi seviyorum. Web geliştirme ile ilgileniyorum. Kodluyoruz'un bu eğitim serisi sayesinde harika şeyler öğrendim ve öğrenmeye devam ediyorum! Sizde aramıza katılın!</p>
-<h3>Sevdiğim Diziler</h3>
-<p>Lost, Prison Break, Fringe ve Vikings</p>
-<h3>Sevdiğim Flimler</h3>
-<p>Forrest Gump, Yeşil Yol, Yüzüklerin Efendisi serisi (2001, 2002, 2003), Fight Club (1999) ve  Esaretin Bedeli</p>
+
+<h3>İlgi Alanlarım</h3>
+<ul>
+    <p>1.Diziler</p>
+    <li>
+        <a href="https://www.imdb.com/title/tt0411008/">Lost</a>
+    </li>
+    <li>
+        Squid Game
+    </li>
+    <li>
+        Fringe
+    </li> 
+</ul>
+
+<ul>
+ 
+<p>2.Flimler</p>
+    <li>
+        Forrest Gump
+    </li>
+    <li>
+        Yeşil Yol
+    </li>
+    <li>
+        Yüzüklerin Efendisi serisi (2001, 2002, 2003)
+    </li> 
+</ul>
+
+<ul>
+ 
+    <p>3.Kitap</p>
+        <li>
+            <a href="https://www.goodreads.com/book/show/929.Memoirs_of_a_Geisha">Memoirs of a Geisha</a>
+        </li>
+        <li>
+            The Kite Runner
+        </li>
+        <li>
+            The Help
+        </li>
+    
+    </ul>
+    
+
+    <h3>Sevdiğim Diziler</h3>
+    <h5>Squid Game</h5>
+    <img src="/d3Hw7kytnfWFMzFR6hVwUgk8Xgf.jpg" width="300" height="300" alt="image">
+    <p>Özet
+        Para sıkıntısı çeken yüzlerce oyuncu, tuhaf bir davet alır. Davette onlara cazip bir ödül karşılığında çocuk oyunlarında yarışmaları teklif edilir. Teklifi kabul eden oyuncular, yarışmayı kazanırlarsa 40 milyon dolarlık büyük ödülün sahibi olacaktır. Ancak ödül cazip olsa da oyunun ölümcük riskleri vardır.</p>
